SONARIAC-1632 Should not fail on array expressions with trailing commas (#1547)